# simLUX

./: .gitignore  3D_LIBRARY.md  ACI_Picker_UI.html  AGENTS.md  ARCHITECTURE.md  Accuracy_Test_Plan.md  Audit.html  AutoRASM_Settings_Guide.xlsx  BLOCK_SYSTEM_GUIDE.md  Background_Ops_Pattern.md  Bug_Report_2026-06-04.html  CLICK_DRAG_HANDLER.md  COMMAND_LINE.md  COMMAND_LINE_CURRENT.md  COMMAND_SYSTEM.md  CONTENT_STYLE.md  Cargo.toml  DIMENSION_GUIDE.md  Daily_Report_2026-06-04.html  Dobject_DXF.md  Dobject_Properties.md  EDIT_GEOMETRY_GUIDE.md  GPU_RENDER_PUSH_STATUS.md  GPU_RENDER_UPDATE.md  HATCH_GUIDE.md  Hatch_Pattern_Wishlist.md  INSPECTOR_DESIGN.md  Implementation_Plan.md  Internal_Storage_Audit.html  Internal_Storage_Audit.md  MERGE_HANDOFF_FOR_DOKKANDAR.md  MODIFY_GUIDE.md  MODULES.md  Map_HSI_LibreCAD.md  OPEN_ISSUES.md  PANEL_SYSTEM.md  PLINE_GUIDE.md  PLUGIN_API.md  PROJECT_NOTES.md  PROJECT_REVIEW.md  (+27 more)
.cargo/: config.toml
.githooks/: pre-commit
Hatch_Patten/: Concentric circles 4x4.dxf  Concentric circles.dxf  brick pattern 4x4.dxf  brick pattern.dxf  continues line.dxf  continues line4x1.dxf  dashed line 4x1.dxf  dashed line.dxf  squer 4x4.dxf  squer.dxf  straight tile 4x4.dxf  straight tile.dxf  tile pattern 4x4.dxf  tile pattern.dxf  varied line weights 4x1.dxf  varied line weights.dxf
LTD-Ies/: ASTRO MINI DOS.ldt  ASTRO mini.ldt  COMET NANO.ldt  DELGADO ULTRA .ldt  DOWNLIGHT-10.ldt  DOWNLIGHT-24.ldt  DOWNLIGHT-36.ldt  HADA OP.ldt  OCULUS GRANDE 2.0.ldt  OCULUS.ldt  PROFUNDO NANO.ldt  PULSE MG MINI.ldt  RIV MG 440mm.ldt  RIVO MG ADJUSTABLE.ldt  SEMI CIRCULO .ldt
assets/hatch/: standard.pat
cad_app/: Cargo.toml
cad_app/assets/: README.txt
cad_app/src/: aci_picker.rs  app.rs  command.rs  dbg_recorder.rs  dock.rs  factory.rs  gpu.rs  hatch_trace.rs  light.rs  light3d.rs  main.rs  param_editor.rs  settings.rs  simlux_io.rs  theme.rs  varreg.rs
cad_app/src/app/: pedit.rs
cad_cli/: Cargo.toml
cad_cli/src/: main.rs
cad_io/: Cargo.toml
cad_io/examples/: import_sandbox.rs  make_sample_room.rs  pat_extract.rs
cad_io/src/: dxf.rs  lib.rs  pat.rs  rsm.rs
cad_kernel/: Cargo.toml
cad_kernel/src/: block.rs  blockdiff.rs  color.rs  construct.rs  dim.rs  dobject.rs  document.rs  fillet.rs  geom.rs  intersect.rs  join.rs  layer.rs  lib.rs  linetype.rs  lineweight.rs  math.rs  modify.rs  parser.rs  patterns.rs  pen.rs  snap.rs  spatial.rs  style.rs  text.rs  trim.rs  wallstyle.rs
cad_light/: Cargo.toml
cad_light/examples/: ldt_check.rs  receiver_demo.rs
cad_light/src/: calc.rs  extrude.rs  ies.rs  ldt.rs  lib.rs  rt.rs  types.rs
cad_nurbs/: Cargo.toml
cad_nurbs/src/: lib.rs
cad_param/: Cargo.toml
cad_param/examples/: solve_demo.rs
cad_param/src/: expr.rs  io.rs  lib.rs  model.rs  solve.rs
cad_raster/: Cargo.toml
cad_raster/examples/: render_dxf.rs  trace_to_dxf.rs
cad_raster/src/: adjust.rs  analyze.rs  doc.rs  fit.rs  lib.rs  trace.rs
cad_snap/: Cargo.toml  README.md
cad_snap/examples/: basic.rs
cad_snap/src/: lib.rs
cad_solid/: Cargo.toml
cad_solid/examples/: sandbox.rs
cad_solid/src/: csg.rs  dbg_recorder.rs  draw.rs  lib.rs  modify.rs
cad_wall/: Cargo.toml
cad_wall/src/: lib.rs
docs/: Guide-for-simLUX.txt
mentor MD/: 2D_DRAFTING_PARITY.md  BASIC_MODIFIERS_RULES.md  BOOLEAN_AS_COMMAND_2026-07-17.md  COMMAND_LINE_RULES.md  COMMAND_REGISTRY_MENTOR.md  DAY_REPORT_2026-07-17.md  FACTORY_IS_THE_ROOM_2026-07-17.md  FOR_UPSTREAM_AGENT.md  HANDOFF_3D_AGENT_2026-07-23.md  HEADER_STANDARD_MENTOR.md  INSPECTOR_DESIGN_MENTOR.md  LIBRARY_REVIEW_3D_2026-07-14.md  LIGHTING_3D_STACK_RESEARCH_2026-07-22.md  MENTOR_REVIEW_2026-07-14.md  MENU_DROPDOWN_MENTOR.md  MESH_HANDLING_STEP1_2.html  METHOD_ACCESS_MENTOR.md  PLANES_ON_DOBJECTS_DESIGN_AND_TODO.md  ROADMAP_3D_TO_MESH_2026-07-22.md  SANDBOX_REVIEW_GUIDE.md  SIMLUX_3D_SANDBOX_PLAN.md  SIMLUX_3D_SOLIDS_PLAN.md  SIMLUX_CALC_ENGINE_PLAN.md  SIMLUX_DIALUX_PLAN.md  SIMLUX_ENGINE_CODING_PLAN.md  SIMLUX_SCENE_AND_DAYLIGHT_PLAN.md  SIMLUX_SYSTEM_ARCHITECTURE.md  STATE_2026-07-15.md  TODO_BBOX_CACHE_2026-07-17.md  VENUE_DECISION_2D_ON_EVERY_PLANE.md
research/: 01_intersections.md  02_pi_and_curve_representation.md  03_entity_properties_hot_warm_cold.md
samples/: corner sofa.dxf
src/: App.css  App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  error.rs  lib.rs  main.rs  state.rs
src-tauri/src/engine/: math.rs  mod.rs
src-tauri/src/engine/calc/: mod.rs
src-tauri/src/engine/draft/: mod.rs
src-tauri/src/engine/dxf/: mod.rs
src-tauri/src/engine/geometry/: mod.rs
src-tauri/src/engine/ies/: mod.rs
src-tauri/src/engine/rt/: mod.rs
src-tauri/src/engine/wall/: mod.rs
src-tauri/src/model/: mod.rs
src/api/: commands.ts
src/components/: CommandLine.tsx  Plan2D.tsx  Sidebar.tsx  StatusBar.tsx  ToolPalette.tsx  Toolbar.tsx  Viewport.tsx  WallLayer.tsx
src/store/: projectStore.ts
src/three/: coords.ts
tools/: build_guide.py  gen-settings.ps1
tools/dwgconv/: .gitignore  Program.cs  README.md  dwgconv.cmd  dwgconv.csproj  dwgconv.sh
