[package]
name    = "cad_app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust_cad"
path = "src/main.rs"

[dependencies]
cad_kernel = { path = "../cad_kernel" }
cad_io     = { path = "../cad_io" }
cad_wall   = { path = "../cad_wall" }
# Base eframe features shared across platforms. The Linux windowing backends
# (wayland/x11) are added only on Linux below — on Windows eframe uses the
# native Win32 backend automatically and those crates don't compile.
eframe     = { version = "0.30", default-features = false, features = ["default_fonts", "glow"] }
egui       = "0.30"
egui_glow  = "0.30"
glow       = "0.14"
# PNG decoding for the brand logo (assets/logo.png). PNG-only to stay light.
image      = { version = "0.25", default-features = false, features = ["png"] }

# Linux-only windowing backends (the original Arch Linux build used these).
[target.'cfg(target_os = "linux")'.dependencies]
eframe = { version = "0.30", default-features = false, features = ["wayland", "x11"] }
