[package]
name    = "cad_nurbs"
version = "0.1.0"
edition = "2021"
description = "Pure-Rust 2D NURBS / B-spline curves — De Boor evaluation, knot vectors, rational weights. Standard algorithms from The NURBS Book (Piegl & Tiller). No UI dependencies."

[dependencies]
cad_kernel = { path = "../cad_kernel" }
