[package]
name = "simlux"
version = "0.1.0"
description = "SIMLUX — a physically-based lighting (lux) simulator for professional lighting design"
authors = ["HSI Lighting <dev@hsilighting.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "simlux_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Math: glam for f32 vectors/matrices (serde feature lets us hand geometry to the UI).
glam = { version = "0.29", features = ["serde"] }
# Work-stealing parallelism for the per-grid-point lux calculation (Phase 3.2+).
rayon = "1"
# Ergonomic error enums across the command boundary.
thiserror = "2"

# DXF import — reuse the tested reader from Auto_RASM. `cad_io` reads DXF into a
# `cad_kernel::Document`. (Walls extrude to single surfaces, so the cad_wall
# junction/miter solver isn't needed; re-add it if we bring back thick walls.)
cad_io     = { git = "https://github.com/dokkandar/Auto_RASM", package = "cad_io",     rev = "dd9e74ef5b06b38f015e1fec09db9f252464657b" }
cad_kernel = { git = "https://github.com/dokkandar/Auto_RASM", package = "cad_kernel", rev = "dd9e74ef5b06b38f015e1fec09db9f252464657b" }

# --- Planned per-phase dependencies (uncomment as each roadmap phase lands) ---
# Phase 3.3  parry3d = "0.17"    # optional: swap the hand-rolled BVH for parry
